--- a/weibo/MainMenu.xib
+++ b/weibo/MainMenu.xib
@@ -57,7 +57,7 @@
 							<array class="NSMutableArray" key="NSMenuItems">
 								<object class="NSMenuItem" id="238522557">
 									<reference key="NSMenu" ref="110575045"/>
-									<string key="NSTitle">About NewApplication</string>
+									<string key="NSTitle">About iwei4mac</string>
 									<string key="NSKeyEquiv"/>
 									<int key="NSMnemonicLoc">2147483647</int>
 									<reference key="NSOnImage" ref="229763992"/>
@@ -118,7 +118,7 @@
 								</object>
 								<object class="NSMenuItem" id="755159360">
 									<reference key="NSMenu" ref="110575045"/>
-									<string key="NSTitle">Hide NewApplication</string>
+									<string key="NSTitle">Hide iwei4mac</string>
 									<string key="NSKeyEquiv">h</string>
 									<int key="NSKeyEquivModMask">1048576</int>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -154,7 +154,7 @@
 								</object>
 								<object class="NSMenuItem" id="632727374">
 									<reference key="NSMenu" ref="110575045"/>
-									<string key="NSTitle">Quit NewApplication</string>
+									<string key="NSTitle">Quit iwei4mac</string>
 									<string key="NSKeyEquiv">q</string>
 									<int key="NSKeyEquivModMask">1048576</int>
 									<int key="NSMnemonicLoc">2147483647</int>
@@ -1912,14 +1912,6 @@
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<object class="IBPartialClassDescription">
-					<string key="className">ANSegmentedControl</string>
-					<string key="superclassName">NSSegmentedControl</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ANSegmentedControl.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
 					<string key="className">AppDelegate</string>
 					<string key="superclassName">NSObject</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -1968,10 +1960,15 @@
 					<string key="className">MainWindowController</string>
 					<string key="superclassName">NSWindowController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="showComposeWindow:">id</string>
 						<string key="showHomeTimeline:">id</string>
 						<string key="showMentionTimeline:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="showComposeWindow:">
+							<string key="name">showComposeWindow:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="showHomeTimeline:">
 							<string key="name">showHomeTimeline:</string>
 							<string key="candidateClassName">id</string>
@@ -1982,20 +1979,15 @@
 						</object>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="anSegmentedControl">ANSegmentedControl</string>
 						<string key="authorizingUserProfileImage">NSImageView</string>
 						<string key="homeTimeLineController">HomeTimelineController</string>
-						<string key="homeTimeLineScrollView">EQSTRScrollView</string>
+						<string key="homeTimelineList">PXListView</string>
 						<string key="mentionTimeLineController">MentionTimelineController</string>
 						<string key="mentionsTimeLineScrollView">EQSTRScrollView</string>
 						<string key="timelineTabs">NSTabView</string>
 						<string key="titleBar">NSView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="anSegmentedControl">
-							<string key="name">anSegmentedControl</string>
-							<string key="candidateClassName">ANSegmentedControl</string>
-						</object>
 						<object class="IBToOneOutletInfo" key="authorizingUserProfileImage">
 							<string key="name">authorizingUserProfileImage</string>
 							<string key="candidateClassName">NSImageView</string>
@@ -2004,9 +1996,9 @@
 							<string key="name">homeTimeLineController</string>
 							<string key="candidateClassName">HomeTimelineController</string>
 						</object>
-						<object class="IBToOneOutletInfo" key="homeTimeLineScrollView">
-							<string key="name">homeTimeLineScrollView</string>
-							<string key="candidateClassName">EQSTRScrollView</string>
+						<object class="IBToOneOutletInfo" key="homeTimelineList">
+							<string key="name">homeTimelineList</string>
+							<string key="candidateClassName">PXListView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="mentionTimeLineController">
 							<string key="name">mentionTimeLineController</string>
@@ -2080,17 +2072,36 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">PXListView</string>
+					<string key="superclassName">EQSTRScrollView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">delegate</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">delegate</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">delegate</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/PXListView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">TimelineController</string>
 					<string key="superclassName">NSObject</string>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">timelineTable</string>
-						<string key="NS.object.0">NSTableView</string>
+						<string key="NS.key.0">timelineListView</string>
+						<string key="NS.object.0">PXListView</string>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">timelineTable</string>
+						<string key="NS.key.0">timelineListView</string>
 						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">timelineTable</string>
-							<string key="candidateClassName">NSTableView</string>
+							<string key="name">timelineListView</string>
+							<string key="candidateClassName">PXListView</string>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
